# duktape-rs

./: Cargo.toml  README.md  build.rs
duktape/: duk_config.h  wrapper.c  wrapper.h
src/: bindings.rs  ffi_gen.rs
